@@ -397,13 +397,6 @@ extern int logoff;		/* Don't write history entry */
 
 extern int top_level_admin;
 
-#ifdef AUTH_SERVER_SUPPORT
-extern char *Pserver_Repos;     /* used to check that same repos is
-                                   transmitted in pserver auth and in
-                                   CVS protocol. */
-
-#endif /* AUTH_SERVER_SUPPORT */
-
 #ifdef CLIENT_SUPPORT
 extern List *dirs_sent_to_server; /* used to decide which "Argument
 				     xxx" commands to send to each
